--- a/HW.ipynb
+++ b/HW.ipynb
@@ -24,14 +24,26 @@
    "execution_count": 2,
    "id": "a361b3e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7efc7fea7550>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set the random seed so we get the same results\n",
     "\n",
-    "seed = 1337\n",
+    "seed = 2845\n",
     "\n",
     "np.random.seed(seed)\n",
-    "random.seed(seed)"
+    "random.seed(seed)\n",
+    "torch.manual_seed(seed)"
    ]
   },
   {
@@ -170,7 +182,7 @@
     "eval_iters = 20\n",
     "\n",
     "batch_size = 64\n",
-    "dropout = 0.0\n",
+    "dropout = 0.1\n",
     "\n",
     "learning_rate = 2e-4 # max learning rate\n",
     "max_iters = 64 # total number of training iterations\n",
@@ -206,17 +218,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing from OpenAI GPT-2 weights\n",
-      "loading weights from pretrained gpt: gpt2-medium\n",
-      "forcing vocab_size=50257, block_size=1024, bias=True\n",
-      "overriding dropout rate to 0.0\n"
+      "Initializing from OpenAI GPT-2 weights\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shahar/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/shaharsandhaus/.conda/envs/182/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -224,6 +233,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading weights from pretrained gpt: gpt2-medium\n",
+      "forcing vocab_size=50257, block_size=1024, bias=True\n",
+      "overriding dropout rate to 0.1\n",
       "number of parameters: 353.77M\n",
       "using fused AdamW: True\n"
      ]
@@ -272,22 +284,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is a Renaissance Nature poem written by HENRY VIII, KING OF ENGLAND called \"Midnight sun\"\n",
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
       "\n",
       "\n",
-      "\"At sea we still go up alone\n",
-      "\n",
-      "He will do this again another time.\"\n",
+      "My Wife is a beautiful mistress with a sweet heart, The world is indeed a beautiful place, And it has always been a beautiful place.\n",
       "\n",
       "\n",
-      "A couple of things have happened to this poem. Firstly, the poem made a lot of noise during the 17th century. The English Sea Age and the influence of French Renaissance poets such as Richard Berry and Jonathan Swift have to be acknowledged here. Secondly, the English poem wasn't just done for the entertainment of the public (much to the chagrin of the French and Spanish Royalty who wanted to keep the poem an exclusive secret). It's also interesting to note that this English version of the poem was not really an English adaptation but, in fact, a very early French translation of the poem (perhaps a mixture of the two versions?).\n",
+      "'My Wife' is based on the poem the Beatles wrote to Frank Sinatra about their love relationship.\n",
       "\n",
-      "By the mid 14th century, the English language was well established and the word \"sun\" had entered common usage in English. Also, many of the English poets of that time, such as Edward Joyce, D.H. Lawrence and George Eliot had a very fondness for poetry, which translates well to the English language (it's hard to argue that D.H. Lawrence was 100% Irish). More importantly though, is that the English language was being used by many famous writers, such as William Shakespeare,\n"
+      "\n",
+      "Here is a verse about Ethel Merman from the song \"Ethel Goes to the Prom\"\n",
+      "\n",
+      "\n",
+      "Ethel Merman on the Prom song \"Ethel Merman Goes to the Prom\"\n",
+      "\n",
+      "\n",
+      "Ethel Merman is an attractive and lovely woman, Ethel Merman is my wife and has been my wife since I was fourteen years old.\n",
+      "\n",
+      "\n",
+      "You see the same Ethel Merman who wore her love bracelets that day, her lady dress and her high heels. She was quite a sight to behold at her inebriated best. It was hard for me to believe that those bracelets and high heels were my own, that they were bought by my father for me, his daughter, a little girl, that I was the child of Ethel Merman and Ethel Merman only, by my mother, Ethel Merman and my father and that Ethel Merman would let anyone else have them. So many beauty bracelets and high heels!\n",
+      "\n",
+      "\n",
+      "Some\n"
      ]
     }
    ],
    "source": [
-    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"Midnight sun\", \"Renaissance\", \"Nature\"))"
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
   },
   {
@@ -336,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "58be150d",
    "metadata": {},
    "outputs": [
@@ -344,82 +367,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 4.8747, val loss 4.8650\n",
-      "iter 0: loss 4.2855, time 9520.89ms, mfu -100.00%\n",
-      "iter 1: loss 4.8589, time 8356.17ms, mfu -100.00%\n",
-      "iter 2: loss 4.8615, time 9769.59ms, mfu -100.00%\n",
-      "iter 3: loss 4.8009, time 9520.53ms, mfu -100.00%\n",
-      "iter 4: loss 4.3002, time 9142.24ms, mfu -100.00%\n",
-      "iter 5: loss 4.4008, time 8654.19ms, mfu 5.88%\n",
-      "iter 6: loss 4.0367, time 7772.94ms, mfu 5.95%\n",
-      "iter 7: loss 4.5093, time 10931.83ms, mfu 5.82%\n",
-      "step 8: train loss 3.2255, val loss 2.6474\n",
+      "step 0: train loss 5.1421, val loss 5.0073\n",
+      "iter 0: loss 3.6166, time 5401.06ms, mfu -100.00%\n",
+      "iter 1: loss 4.7811, time 4519.43ms, mfu -100.00%\n",
+      "iter 2: loss 4.9809, time 4738.86ms, mfu -100.00%\n",
+      "iter 3: loss 4.9199, time 4662.13ms, mfu -100.00%\n",
+      "iter 4: loss 4.6358, time 5459.18ms, mfu -100.00%\n",
+      "iter 5: loss 4.9782, time 5064.82ms, mfu 10.06%\n",
+      "iter 6: loss 4.4182, time 4724.18ms, mfu 10.13%\n",
+      "iter 7: loss 3.9940, time 4880.24ms, mfu 10.16%\n",
+      "step 8: train loss 3.3427, val loss 3.3909\n",
       "saving checkpoint to out\n",
-      "iter 8: loss 3.4330, time 16657.02ms, mfu 5.55%\n",
-      "iter 9: loss 1.6707, time 9833.04ms, mfu 5.51%\n",
-      "iter 10: loss 3.7445, time 9974.26ms, mfu 5.47%\n",
-      "iter 11: loss 2.8450, time 9377.84ms, mfu 5.47%\n",
-      "iter 12: loss 1.4326, time 8583.87ms, mfu 5.51%\n",
-      "iter 13: loss 3.3533, time 8462.71ms, mfu 5.56%\n",
-      "iter 14: loss 3.3996, time 8139.78ms, mfu 5.63%\n",
-      "iter 15: loss 3.4540, time 10817.62ms, mfu 5.54%\n",
-      "step 16: train loss 2.7038, val loss 2.8791\n",
-      "iter 16: loss 2.5836, time 10399.68ms, mfu 5.48%\n",
-      "iter 17: loss 2.6575, time 8601.16ms, mfu 5.52%\n",
-      "iter 18: loss 2.5561, time 8878.05ms, mfu 5.54%\n",
-      "iter 19: loss 2.1918, time 9962.58ms, mfu 5.50%\n",
-      "iter 20: loss 3.4795, time 9956.48ms, mfu 5.46%\n",
-      "iter 21: loss 3.4623, time 9444.59ms, mfu 5.45%\n",
-      "iter 22: loss 3.7406, time 9757.82ms, mfu 5.43%\n",
-      "iter 23: loss 2.4477, time 9559.67ms, mfu 5.42%\n",
-      "step 24: train loss 2.4869, val loss 2.9441\n",
-      "iter 24: loss 3.2600, time 10730.45ms, mfu 5.35%\n",
-      "iter 25: loss 2.4194, time 8634.51ms, mfu 5.41%\n",
-      "iter 26: loss 3.0633, time 8789.93ms, mfu 5.45%\n",
-      "iter 27: loss 2.9266, time 9033.03ms, mfu 5.47%\n",
-      "iter 28: loss 2.8342, time 9817.72ms, mfu 5.44%\n",
-      "iter 29: loss 0.3812, time 9737.61ms, mfu 5.42%\n",
-      "iter 30: loss 0.3598, time 8182.63ms, mfu 5.50%\n",
-      "iter 31: loss 2.7954, time 10434.37ms, mfu 5.44%\n",
-      "step 32: train loss 2.2050, val loss 2.5616\n",
+      "iter 8: loss 3.6332, time 18804.79ms, mfu 9.41%\n",
+      "iter 9: loss 4.7372, time 4717.05ms, mfu 9.55%\n",
+      "iter 10: loss 3.8514, time 4317.95ms, mfu 9.78%\n",
+      "iter 11: loss 3.8395, time 4674.32ms, mfu 9.89%\n",
+      "iter 12: loss 4.1297, time 5591.74ms, mfu 9.81%\n",
+      "iter 13: loss 3.6328, time 4492.32ms, mfu 9.96%\n",
+      "iter 14: loss 1.4290, time 4631.42ms, mfu 10.07%\n",
+      "iter 15: loss 4.3114, time 5453.52ms, mfu 9.99%\n",
+      "step 16: train loss 2.7270, val loss 2.8175\n",
       "saving checkpoint to out\n",
-      "iter 32: loss 3.1969, time 15427.70ms, mfu 5.22%\n",
-      "iter 33: loss 3.1082, time 9522.54ms, mfu 5.23%\n",
-      "iter 34: loss 0.4552, time 8634.59ms, mfu 5.30%\n",
-      "iter 35: loss 2.8646, time 11187.83ms, mfu 5.23%\n",
-      "iter 36: loss 3.5392, time 9824.51ms, mfu 5.22%\n",
-      "iter 37: loss 1.4252, time 9537.04ms, mfu 5.23%\n",
-      "iter 38: loss 2.8704, time 10296.75ms, mfu 5.21%\n",
-      "iter 39: loss 2.4484, time 8594.54ms, mfu 5.28%\n",
-      "step 40: train loss 2.7123, val loss 3.1286\n",
-      "iter 40: loss 3.1311, time 11470.57ms, mfu 5.19%\n",
-      "iter 41: loss 2.9456, time 9588.05ms, mfu 5.21%\n",
-      "iter 42: loss 2.5029, time 10204.97ms, mfu 5.18%\n",
-      "iter 43: loss 1.7927, time 11746.18ms, mfu 5.10%\n",
-      "iter 44: loss 3.2871, time 10600.69ms, mfu 5.07%\n",
-      "iter 45: loss 0.3611, time 8503.13ms, mfu 5.16%\n",
-      "iter 46: loss 2.7918, time 11087.40ms, mfu 5.10%\n",
-      "iter 47: loss 1.5936, time 8778.65ms, mfu 5.17%\n",
-      "step 48: train loss 2.6425, val loss 2.8789\n",
-      "iter 48: loss 2.9826, time 12563.43ms, mfu 5.06%\n",
-      "iter 49: loss 3.3404, time 9235.23ms, mfu 5.11%\n",
-      "iter 50: loss 2.3160, time 9292.83ms, mfu 5.14%\n",
-      "iter 51: loss 0.2615, time 8429.85ms, mfu 5.23%\n",
-      "iter 52: loss 0.3734, time 9408.67ms, mfu 5.25%\n",
-      "iter 53: loss 0.6136, time 9941.74ms, mfu 5.24%\n",
-      "iter 54: loss 0.7430, time 9011.48ms, mfu 5.28%\n",
-      "iter 55: loss 3.0721, time 8574.06ms, mfu 5.35%\n",
-      "step 56: train loss 2.6573, val loss 2.8709\n",
-      "iter 56: loss 2.4683, time 10934.10ms, mfu 5.28%\n",
-      "iter 57: loss 3.6041, time 7766.84ms, mfu 5.41%\n",
-      "iter 58: loss 0.7138, time 11539.05ms, mfu 5.31%\n",
-      "iter 59: loss 2.8168, time 10080.79ms, mfu 5.28%\n",
-      "iter 60: loss 2.8905, time 8059.91ms, mfu 5.38%\n",
-      "iter 61: loss 2.7568, time 9533.28ms, mfu 5.38%\n",
-      "iter 62: loss 0.2778, time 8859.82ms, mfu 5.42%\n",
-      "iter 63: loss 2.9146, time 10569.42ms, mfu 5.36%\n",
-      "step 64: train loss 2.2507, val loss 2.9489\n",
-      "iter 64: loss 0.2411, time 10775.15ms, mfu 5.29%\n"
+      "iter 16: loss 3.8459, time 18932.84ms, mfu 9.26%\n",
+      "iter 17: loss 1.4224, time 5195.83ms, mfu 9.32%\n",
+      "iter 18: loss 3.1396, time 4571.74ms, mfu 9.50%\n",
+      "iter 19: loss 2.7642, time 5318.26ms, mfu 9.51%\n",
+      "iter 20: loss 3.1749, time 5205.12ms, mfu 9.53%\n",
+      "iter 21: loss 2.9597, time 5161.02ms, mfu 9.57%\n",
+      "iter 22: loss 3.3036, time 4618.97ms, mfu 9.71%\n",
+      "iter 23: loss 3.3714, time 5185.76ms, mfu 9.72%\n",
+      "step 24: train loss 2.9120, val loss 2.9169\n",
+      "iter 24: loss 3.2776, time 5294.30ms, mfu 9.71%\n",
+      "iter 25: loss 3.7003, time 4413.03ms, mfu 9.90%\n",
+      "iter 26: loss 3.0329, time 4292.31ms, mfu 10.09%\n",
+      "iter 27: loss 2.8194, time 4799.42ms, mfu 10.15%\n",
+      "iter 28: loss 4.4411, time 4264.38ms, mfu 10.33%\n",
+      "iter 29: loss 3.4714, time 4912.62ms, mfu 10.33%\n",
+      "iter 30: loss 2.4945, time 4676.30ms, mfu 10.39%\n",
+      "iter 31: loss 3.7711, time 4811.67ms, mfu 10.41%\n",
+      "step 32: train loss 2.4942, val loss 2.6723\n",
+      "saving checkpoint to out\n",
+      "iter 32: loss 2.7562, time 18281.24ms, mfu 9.64%\n",
+      "iter 33: loss 3.6578, time 4979.03ms, mfu 9.70%\n",
+      "iter 34: loss 4.0651, time 5632.03ms, mfu 9.64%\n",
+      "iter 35: loss 2.9723, time 4715.78ms, mfu 9.75%\n",
+      "iter 36: loss 2.5075, time 5023.66ms, mfu 9.79%\n",
+      "iter 37: loss 4.5419, time 5063.99ms, mfu 9.82%\n",
+      "iter 38: loss 0.3739, time 5270.97ms, mfu 9.80%\n",
+      "iter 39: loss 2.3220, time 5255.57ms, mfu 9.79%\n",
+      "step 40: train loss 2.8847, val loss 2.8611\n",
+      "iter 40: loss 2.9482, time 5302.82ms, mfu 9.77%\n",
+      "iter 41: loss 3.5527, time 4579.73ms, mfu 9.91%\n",
+      "iter 42: loss 3.1789, time 4777.47ms, mfu 9.98%\n",
+      "iter 43: loss 1.0033, time 4577.59ms, mfu 10.10%\n",
+      "iter 44: loss 3.3924, time 4486.61ms, mfu 10.22%\n",
+      "iter 45: loss 3.8740, time 4385.09ms, mfu 10.36%\n",
+      "iter 46: loss 2.8892, time 4123.27ms, mfu 10.56%\n",
+      "iter 47: loss 2.7940, time 5096.53ms, mfu 10.50%\n",
+      "step 48: train loss 2.3627, val loss 3.1641\n",
+      "iter 48: loss 3.2292, time 6137.93ms, mfu 10.28%\n",
+      "iter 49: loss 2.9820, time 4212.63ms, mfu 10.46%\n",
+      "iter 50: loss 0.6770, time 4191.82ms, mfu 10.63%\n",
+      "iter 51: loss 2.4226, time 4423.83ms, mfu 10.72%\n",
+      "iter 52: loss 4.1544, time 4472.85ms, mfu 10.79%\n",
+      "iter 53: loss 3.5238, time 4847.46ms, mfu 10.76%\n",
+      "iter 54: loss 2.4188, time 5026.46ms, mfu 10.70%\n",
+      "iter 55: loss 3.5245, time 4670.47ms, mfu 10.72%\n",
+      "step 56: train loss 2.3790, val loss 2.8749\n",
+      "iter 56: loss 2.9204, time 4790.66ms, mfu 10.71%\n",
+      "iter 57: loss 3.4905, time 4379.28ms, mfu 10.80%\n",
+      "iter 58: loss 2.5272, time 4904.53ms, mfu 10.76%\n",
+      "iter 59: loss 3.5849, time 5020.71ms, mfu 10.70%\n",
+      "iter 60: loss 2.3142, time 3854.41ms, mfu 10.95%\n",
+      "iter 61: loss 3.1864, time 4970.98ms, mfu 10.88%\n"
      ]
     }
    ],
@@ -513,97 +533,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "89cf181c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is a Renaissance Nature poem written by HENRY VIII, KING OF ENGLAND called \"Midnight sun\"\n",
-      "\n",
-      "Hear me well, O moon, how oft it hath done my part to please,\r\n",
-      "And now I rise in the dimness, and now that the sun hath moved,\r\n",
-      "Unto me in the great shadow of the morning,\r\n",
-      "And yet I hear the same loud voice, and yet I am turned after,\r\n",
-      "And yet I hear the same deep sigh: but in that way,\r\n",
-      "The night's shadow, that was my soul, Is but shadow, and must die.\r\n",
-      "\r\n",
-      "And now I hear the same smooth voice, in that calm sound of my heart,\r\n",
-      "Which in deep sleep was but as a great storm,\r\n",
-      "Unswayed by sound, since the night did get away.\r\n",
-      "\r\n",
-      "There is no night in this world but that which comes\r\n",
-      "With suddenness, and that with pain,\r\n",
-      "And that in rude season, and that when the day cannot be.\r\n",
-      "\r\n",
-      "And now I hear the same strong sigh, in that sound of my mind,\r\n",
-      "That in my soul which was the storm, and that with pain,\r\n",
-      "That in the storm still my self did break.\r\n",
-      "\r\n",
-      "And now I hear the same smooth voice\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"Midnight sun\", \"Renaissance\", \"Nature\"))"
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1497e5d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is a Renaissance Nature poem written by HENRY VIII, KING OF ENGLAND called \"Midnight sun\"\n",
-      "\n",
-      "When noon is gone,\r\n",
-      "And the noon beams rise,\r\n",
-      "With strange eyes,\r\n",
-      "Unhappy and mournful\r\n",
-      "In the old twilight,\r\n",
-      "    And they approach\r\n",
-      "My golden chamber,\r\n",
-      "    Which is the most full     Of light.\r\n",
-      "\r\n",
-      "Yet do they stir\r\n",
-      "And the air moves,\r\n",
-      "    Which might make me sleep.\r\n",
-      "\r\n",
-      "As they turn,\r\n",
-      "And in a little way,\r\n",
-      "Oh, they lie, and cry\r\n",
-      "    For their king, for they mock\r\n",
-      "    For their King to see:\r\n",
-      "The best thing they can do,\r\n",
-      "    For the world to look upon.\r\n",
-      "They stare for their queen,\r\n",
-      "    For love of love to have,\r\n",
-      "    For the sun to shine,\r\n",
-      "    And to have her hand\r\n",
-      "    To hold.\r\n",
-      "\r\n",
-      "But they lie, and cry,\r\n",
-      "    For their Queen and King\r\n",
-      "    For love of love to have,\r\n",
-      "    For the world to see.\r\n",
-      "In love\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"Midnight sun\", \"Renaissance\", \"Nature\"))"
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "45ceab59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b837cdea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -625,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
