--- a/HW.ipynb
+++ b/HW.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7efc7fea7550>"
+       "<torch._C.Generator at 0x7f039e74f550>"
       ]
      },
      "execution_count": 2,
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "58be150d",
    "metadata": {},
    "outputs": [
@@ -368,78 +368,82 @@
      "output_type": "stream",
      "text": [
       "step 0: train loss 5.1421, val loss 5.0073\n",
-      "iter 0: loss 3.6166, time 5401.06ms, mfu -100.00%\n",
-      "iter 1: loss 4.7811, time 4519.43ms, mfu -100.00%\n",
-      "iter 2: loss 4.9809, time 4738.86ms, mfu -100.00%\n",
-      "iter 3: loss 4.9199, time 4662.13ms, mfu -100.00%\n",
-      "iter 4: loss 4.6358, time 5459.18ms, mfu -100.00%\n",
-      "iter 5: loss 4.9782, time 5064.82ms, mfu 10.06%\n",
-      "iter 6: loss 4.4182, time 4724.18ms, mfu 10.13%\n",
-      "iter 7: loss 3.9940, time 4880.24ms, mfu 10.16%\n",
+      "iter 0: loss 3.6166, time 5332.68ms, mfu -100.00%\n",
+      "iter 1: loss 4.7811, time 4451.41ms, mfu -100.00%\n",
+      "iter 2: loss 4.9809, time 4699.58ms, mfu -100.00%\n",
+      "iter 3: loss 4.9199, time 4599.42ms, mfu -100.00%\n",
+      "iter 4: loss 4.6358, time 5416.20ms, mfu -100.00%\n",
+      "iter 5: loss 4.9782, time 5019.91ms, mfu 10.15%\n",
+      "iter 6: loss 4.4182, time 4690.82ms, mfu 10.22%\n",
+      "iter 7: loss 3.9940, time 4831.82ms, mfu 10.25%\n",
       "step 8: train loss 3.3427, val loss 3.3909\n",
       "saving checkpoint to out\n",
-      "iter 8: loss 3.6332, time 18804.79ms, mfu 9.41%\n",
-      "iter 9: loss 4.7372, time 4717.05ms, mfu 9.55%\n",
-      "iter 10: loss 3.8514, time 4317.95ms, mfu 9.78%\n",
-      "iter 11: loss 3.8395, time 4674.32ms, mfu 9.89%\n",
-      "iter 12: loss 4.1297, time 5591.74ms, mfu 9.81%\n",
-      "iter 13: loss 3.6328, time 4492.32ms, mfu 9.96%\n",
-      "iter 14: loss 1.4290, time 4631.42ms, mfu 10.07%\n",
-      "iter 15: loss 4.3114, time 5453.52ms, mfu 9.99%\n",
+      "iter 8: loss 3.6332, time 19147.56ms, mfu 9.49%\n",
+      "iter 9: loss 4.7372, time 4994.51ms, mfu 9.56%\n",
+      "iter 10: loss 3.8514, time 4611.93ms, mfu 9.71%\n",
+      "iter 11: loss 3.8395, time 4996.79ms, mfu 9.76%\n",
+      "iter 12: loss 4.1297, time 5797.89ms, mfu 9.66%\n",
+      "iter 13: loss 3.6328, time 4780.50ms, mfu 9.76%\n",
+      "iter 14: loss 1.4290, time 4905.02ms, mfu 9.82%\n",
+      "iter 15: loss 4.3114, time 5623.81ms, mfu 9.75%\n",
       "step 16: train loss 2.7270, val loss 2.8175\n",
       "saving checkpoint to out\n",
-      "iter 16: loss 3.8459, time 18932.84ms, mfu 9.26%\n",
-      "iter 17: loss 1.4224, time 5195.83ms, mfu 9.32%\n",
-      "iter 18: loss 3.1396, time 4571.74ms, mfu 9.50%\n",
-      "iter 19: loss 2.7642, time 5318.26ms, mfu 9.51%\n",
-      "iter 20: loss 3.1749, time 5205.12ms, mfu 9.53%\n",
-      "iter 21: loss 2.9597, time 5161.02ms, mfu 9.57%\n",
-      "iter 22: loss 3.3036, time 4618.97ms, mfu 9.71%\n",
-      "iter 23: loss 3.3714, time 5185.76ms, mfu 9.72%\n",
+      "iter 16: loss 3.8459, time 19068.12ms, mfu 9.04%\n",
+      "iter 17: loss 1.4224, time 5187.81ms, mfu 9.12%\n",
+      "iter 18: loss 3.1396, time 4571.13ms, mfu 9.32%\n",
+      "iter 19: loss 2.7642, time 5330.23ms, mfu 9.34%\n",
+      "iter 20: loss 3.1749, time 5212.73ms, mfu 9.38%\n",
+      "iter 21: loss 2.9597, time 5155.79ms, mfu 9.43%\n",
+      "iter 22: loss 3.3036, time 4624.37ms, mfu 9.59%\n",
+      "iter 23: loss 3.3714, time 5182.65ms, mfu 9.62%\n",
       "step 24: train loss 2.9120, val loss 2.9169\n",
-      "iter 24: loss 3.2776, time 5294.30ms, mfu 9.71%\n",
-      "iter 25: loss 3.7003, time 4413.03ms, mfu 9.90%\n",
-      "iter 26: loss 3.0329, time 4292.31ms, mfu 10.09%\n",
-      "iter 27: loss 2.8194, time 4799.42ms, mfu 10.15%\n",
-      "iter 28: loss 4.4411, time 4264.38ms, mfu 10.33%\n",
-      "iter 29: loss 3.4714, time 4912.62ms, mfu 10.33%\n",
-      "iter 30: loss 2.4945, time 4676.30ms, mfu 10.39%\n",
-      "iter 31: loss 3.7711, time 4811.67ms, mfu 10.41%\n",
+      "iter 24: loss 3.2776, time 5300.81ms, mfu 9.61%\n",
+      "iter 25: loss 3.7003, time 4399.97ms, mfu 9.81%\n",
+      "iter 26: loss 3.0329, time 4294.75ms, mfu 10.02%\n",
+      "iter 27: loss 2.8194, time 4792.41ms, mfu 10.08%\n",
+      "iter 28: loss 4.4411, time 4265.81ms, mfu 10.26%\n",
+      "iter 29: loss 3.4714, time 4920.04ms, mfu 10.27%\n",
+      "iter 30: loss 2.4945, time 4676.47ms, mfu 10.33%\n",
+      "iter 31: loss 3.7711, time 4813.47ms, mfu 10.36%\n",
       "step 32: train loss 2.4942, val loss 2.6723\n",
       "saving checkpoint to out\n",
-      "iter 32: loss 2.7562, time 18281.24ms, mfu 9.64%\n",
-      "iter 33: loss 3.6578, time 4979.03ms, mfu 9.70%\n",
-      "iter 34: loss 4.0651, time 5632.03ms, mfu 9.64%\n",
-      "iter 35: loss 2.9723, time 4715.78ms, mfu 9.75%\n",
-      "iter 36: loss 2.5075, time 5023.66ms, mfu 9.79%\n",
-      "iter 37: loss 4.5419, time 5063.99ms, mfu 9.82%\n",
-      "iter 38: loss 0.3739, time 5270.97ms, mfu 9.80%\n",
-      "iter 39: loss 2.3220, time 5255.57ms, mfu 9.79%\n",
+      "iter 32: loss 2.7562, time 18375.98ms, mfu 9.60%\n",
+      "iter 33: loss 3.6578, time 4961.81ms, mfu 9.67%\n",
+      "iter 34: loss 4.0651, time 5620.41ms, mfu 9.61%\n",
+      "iter 35: loss 2.9723, time 4721.86ms, mfu 9.72%\n",
+      "iter 36: loss 2.5075, time 5037.87ms, mfu 9.76%\n",
+      "iter 37: loss 4.5419, time 5067.40ms, mfu 9.79%\n",
+      "iter 38: loss 0.3739, time 5289.92ms, mfu 9.77%\n",
+      "iter 39: loss 2.3220, time 5260.11ms, mfu 9.77%\n",
       "step 40: train loss 2.8847, val loss 2.8611\n",
-      "iter 40: loss 2.9482, time 5302.82ms, mfu 9.77%\n",
-      "iter 41: loss 3.5527, time 4579.73ms, mfu 9.91%\n",
-      "iter 42: loss 3.1789, time 4777.47ms, mfu 9.98%\n",
-      "iter 43: loss 1.0033, time 4577.59ms, mfu 10.10%\n",
-      "iter 44: loss 3.3924, time 4486.61ms, mfu 10.22%\n",
-      "iter 45: loss 3.8740, time 4385.09ms, mfu 10.36%\n",
-      "iter 46: loss 2.8892, time 4123.27ms, mfu 10.56%\n",
-      "iter 47: loss 2.7940, time 5096.53ms, mfu 10.50%\n",
+      "iter 40: loss 2.9482, time 5290.00ms, mfu 9.75%\n",
+      "iter 41: loss 3.5527, time 4579.50ms, mfu 9.89%\n",
+      "iter 42: loss 3.1789, time 4775.20ms, mfu 9.97%\n",
+      "iter 43: loss 1.0033, time 4578.42ms, mfu 10.08%\n",
+      "iter 44: loss 3.3924, time 4487.93ms, mfu 10.21%\n",
+      "iter 45: loss 3.8740, time 4375.22ms, mfu 10.35%\n",
+      "iter 46: loss 2.8892, time 4123.28ms, mfu 10.55%\n",
+      "iter 47: loss 2.7940, time 5102.74ms, mfu 10.49%\n",
       "step 48: train loss 2.3627, val loss 3.1641\n",
-      "iter 48: loss 3.2292, time 6137.93ms, mfu 10.28%\n",
-      "iter 49: loss 2.9820, time 4212.63ms, mfu 10.46%\n",
-      "iter 50: loss 0.6770, time 4191.82ms, mfu 10.63%\n",
-      "iter 51: loss 2.4226, time 4423.83ms, mfu 10.72%\n",
-      "iter 52: loss 4.1544, time 4472.85ms, mfu 10.79%\n",
-      "iter 53: loss 3.5238, time 4847.46ms, mfu 10.76%\n",
-      "iter 54: loss 2.4188, time 5026.46ms, mfu 10.70%\n",
-      "iter 55: loss 3.5245, time 4670.47ms, mfu 10.72%\n",
+      "iter 48: loss 3.2292, time 6148.64ms, mfu 10.27%\n",
+      "iter 49: loss 2.9820, time 4214.11ms, mfu 10.45%\n",
+      "iter 50: loss 0.6770, time 4201.18ms, mfu 10.62%\n",
+      "iter 51: loss 2.4226, time 4419.08ms, mfu 10.71%\n",
+      "iter 52: loss 4.1544, time 4474.02ms, mfu 10.78%\n",
+      "iter 53: loss 3.5238, time 4837.52ms, mfu 10.75%\n",
+      "iter 54: loss 2.4188, time 5031.04ms, mfu 10.69%\n",
+      "iter 55: loss 3.5245, time 4676.84ms, mfu 10.71%\n",
       "step 56: train loss 2.3790, val loss 2.8749\n",
-      "iter 56: loss 2.9204, time 4790.66ms, mfu 10.71%\n",
-      "iter 57: loss 3.4905, time 4379.28ms, mfu 10.80%\n",
-      "iter 58: loss 2.5272, time 4904.53ms, mfu 10.76%\n",
-      "iter 59: loss 3.5849, time 5020.71ms, mfu 10.70%\n",
-      "iter 60: loss 2.3142, time 3854.41ms, mfu 10.95%\n",
-      "iter 61: loss 3.1864, time 4970.98ms, mfu 10.88%\n"
+      "iter 56: loss 2.9204, time 4793.49ms, mfu 10.70%\n",
+      "iter 57: loss 3.4905, time 4369.24ms, mfu 10.80%\n",
+      "iter 58: loss 2.5272, time 4901.20ms, mfu 10.76%\n",
+      "iter 59: loss 3.5849, time 5019.01ms, mfu 10.70%\n",
+      "iter 60: loss 2.3142, time 3850.13ms, mfu 10.95%\n",
+      "iter 61: loss 3.1864, time 4982.56ms, mfu 10.88%\n",
+      "iter 62: loss 3.0970, time 4749.33ms, mfu 10.86%\n",
+      "iter 63: loss 2.7175, time 4401.85ms, mfu 10.93%\n",
+      "step 64: train loss 2.8640, val loss 2.7589\n",
+      "iter 64: loss 3.2625, time 5283.30ms, mfu 10.80%\n"
      ]
     }
    ],
@@ -533,30 +537,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "89cf181c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems, edited by Richard Houghton called \"My Wife\"\n",
+      "HENRY VIII\n"
+     ]
+    }
+   ],
    "source": [
     "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1497e5d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "HENRY VIII, KING OF ENGLAND from Collected Poems. Copyright  1923 by Helen S. Yonge. Reprinted with the permission of New Directions Publishing Corporation. Used by permission of Alfred A. Knopf, an imprint of the Knopf Doubleday Publishing Group. All rights reserved.          My Wife,                  I did long ago pray for thy love,                  To which my heart I cry,                I have long since sung with,                       To wit, that thou do so well,                On my heart, and to thee,                   On my mind, as in thy words,                    That I may have thy love\n"
+     ]
+    }
+   ],
    "source": [
     "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "45ceab59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "Hark ye, my lady, here is a true love poem written by WILLIAM SHAKESPEARE called \"As I Walk\"\n",
+      "\n",
+      "Who, since the earth, till it was a cedar;\r\n",
+      "Which, from all the birds of earth, with every shape,\r\n",
+      "Shall sing in the evening,\r\n",
+      "And do the greenbird-like way.\r\n",
+      "\r\n",
+      "And my lady, where are you,\r\n",
+      "That can tell me this?\r\n",
+      "Do you, my lady, live in your couch?\r\n",
+      "Come, come, do you live in your house?\r\n",
+      "Do you live in a mansion or a field?\r\n",
+      "Do you walk barefoot, or barefoot bare,\r\n",
+      "Where you are, and where you walk?\r\n",
+      "Do you live live in a house or a store?\r\n",
+      "Do you live in a court or a street?\r\n",
+      "Do you live in a house or a store?\r\n",
+      "Do you live in a court or a street?\r\n",
+      "Do you live in a court or a house?\r\n",
+      "Do you live in a court or a store?\r\n",
+      "Do you live in a court or a house?\r\n",
+      "Do you live in a court or a store\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a2068c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "HENRY VIII, KING OF ENGLAND, My Wife from Selected Poems, published by Liveright Publishing Group Australia.  Copyright  1933, 1966 by H. M. A. Liveright. Used by permission of Liveright Publishing Australia. All rights reserved.                                               Henry VIII, King of England from Selected Poems, published by Liveright Publishing Group Australia.                                     Henry VIII, King of England from Selected Poems, copyright  1986 by Liveright Publishing Australia.                                        Henry VIII, King of England from Selected Poems.                              \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6386740c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "Originally published in Poetry, May, 1787. Reprinted with the permission of Houghton Mifflin Company. Copyright  1994 by Michael Houghton Mifflin Company. Used by permission of Houghton Mifflin Company. All rights reserved. <|endoftext|>What is a Modern Nature poem written by SIR PHILIP SIDNEY called \"The Song of the Suckling Woom\"\n",
+      "\n",
+      "Originally published in Poetry, March 18, 1887. Reprinted with the permission of Houghton Mifflin Company.     Copyright  1933, 1954 by SIR PHILIP SIDNEY.      Reprinted with the permission of Houghton Mifflin Company.     Copyright  1993 by SIR PHILIP SIDNEY.     Reprinted with the permission of Houghton Mifflin Company.     Copyright  1994 by SIR PHILIP SIDNEY.     Reprinted with the permission of Houghton Mifflin Company.     Copyright  1994 by SIR PHILIP SIDNEY.     Reprinted with the permission of Houghton M\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5bdaa8f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "Hench hath no hand,\r\n",
+      "What skill can so strong a thing excel\r\n",
+      "A horse to run upon a cart?\r\n",
+      "                                                                                                                                                                                                                                    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7ad2bc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "HENRY VIII, KING OF ENGLAND: My Wife. from Collected Poems, edited by Eusebius of Poitiers. Copyright  1966 by The Estate of Henry VIII, King of England. Reprinted with the permission of Alfred A. Knopf, an imprint of the Knopf Doubleday Publishing Group, a division of Random House LLC. All rights reserved.                                                                                                                                                                             \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "af46fc99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is a Renaissance Love poem written by HENRY VIII, KING OF ENGLAND called \"My Wife\"\n",
+      "\n",
+      "Envy and jealousy made my hair grow.\r\n",
+      "Revolting my thoughts, and the mind of me black,\r\n",
+      "Those were the things which made me so poor:\r\n",
+      "A small fortune, which might not be:\r\n",
+      "And had I not a lady of surpassing beauty,\r\n",
+      "And yet spent the love of her, and been borne,\r\n",
+      "Then did the love of her still rage,\r\n",
+      "And I, whom I had so much worth,\r\n",
+      "Had so little time to envy, and so little time to hate.\r\n",
+      "By my love I sinned, and made my sin now found\r\n",
+      "The cause of my amiss, that it made me angry.\r\n",
+      "And the most grievous thing is, that I sinned:\r\n",
+      "I did sin in love, which she spake:\r\n",
+      "But my love was not love:\r\n",
+      "And I sinned, that she spake;\r\n",
+      "And sinned, that she spake;\r\n",
+      "And sinned, in love which she did.\r\n",
+      "The good that I sinned, and the good that I said,\r\n",
+      "Was one, and it is not my own.\r\n",
+      "Had I not no loves but her,\r\n",
+      "Had\n"
+     ]
+    }
+   ],
    "source": [
     "print(sample_model(\"HENRY VIII, KING OF ENGLAND\", \"My Wife\", \"Renaissance\", \"Love\"))"
    ]
@@ -564,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b837cdea",
+   "id": "4edeee59",
    "metadata": {},
    "outputs": [],
    "source": []
